# bill_calculator

./: .gitignore  README.md  bill_calculator_notebook.py  pyproject.toml  skills-lock.json
__marimo__/session/: bill_calculator.py.json  bill_calculator_notebook.py.json  bill_calculator_v1.py.json  bill_calculator_v2.py.json
sample_tariffs/: sample_ausgrid_tariffs.json
src/: __init__.py  battery.py  calculations.py  helpers.py  read_data.py  tariffs.py
