[project]
name = "bill-calculator"
version = "0.1.0"
description = "Interactive electricity bill calculator for exploring tariff and solar/battery scenarios"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2025.12.0",
    "ipdb>=0.13.13",
    "ipython>=9.9.0",
    "marimo[lsp,recommended]>=0.18.4",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=5.0.0",
    "pyarrow>=22.0.0",
    "pyzmq>=27.1.0",
    "requests>=2.31.0",
    "watchdog>=6.0.0",
]
